Unable to present file upload picker after interactively dismissing a previously opened picker https://bugs.webkit.org/show_bug.cgi?id=209613 rdar://problem/60931009

Reviewed by Daniel Bates.

-[<UIDocumentPickerViewController> documentPickerWasCancelled:] doesn't get called if you
dismiss the view controller using the interactive swipe dismissal gesture added in iOS 13.
As a result, the web view will continue to think it's showing a file picker after dismissing
it this way, meaning you can't present any other file pickers from the same web view. Fix
this by implementing UIAdaptivePresentationControllerDelegate in WKFileUploadPanel to cancel
and tear down the file picker operation when the view controller is interactively dismised.

* UIProcess/ios/forms/WKFileUploadPanel.mm:
(-[WKFileUploadPanel showFilePickerMenu]):
(-[WKFileUploadPanel presentationControllerDidDismiss:]):


Canonical link: https://commits.webkit.org/227517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264785 268f45cc-cd09-0410-ab3c-d52691b4dbfc